# Interceptor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: cli.txt
scripts/: package-release.ps1
src/: config.rs  console_window.rs  elevation.rs  interceptor.rs  main.rs  project.rs  tui.rs  updater.rs
